--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
                                                                                                                                                                                                       <script src="secrets.js"></script>
                                                                                                                                                                                                       <script src="gpt.js"></script>
                                                                                                                                                                                                       <script src="script.js"></script>
+                                                                                                                                                                                                      <script type="module" src="secret.js"></script>
                                                                                                                                                                                                       </body>
                                                                                                                                                                                                       </html>
                                                                                                                                                                                                       
