call/response troubleshooting

--- a/index.html
+++ b/index.html
@@ -1,21 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-    <title>GPT Chat Assistant</title>
-      <link rel="stylesheet" href="style.css">
-      </head>
-      <body>
-        <h1>Virtual GPT Assistant</h1>
-          <p>Type something and get a response from GPT!</p>
+  <title>GPT Chat Assistant</title>
+  <link rel="stylesheet" href="style.css">
+</head>
 
-            <div id="chat-box" class="chat-box"></div>
+<body>
+  <h1>Virtual GPT Assistant</h1>
+  <p>Type something and get a response from GPT!</p>
 
-              <form id="chat-form">
-                  <input type="text" id="user-input" placeholder="Say something..." required />
-                      <button type="submit">Send</button>
-                        </form>
+  <div id="chat-box" class="chat-box"></div>
 
-                          <script type="module" src="script.js"></script>
-                          </body>
-                          </html>
+  <form id="chat-form">
+    <input type="text" id="user-input" placeholder="Say something..." required />
+    <button type="submit">Send</button>
+  </form>
+
+  <script type="module" src="script.js">
+  </script>
+
+</body>
+
+</html>
