--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8">
   <title>GPT Chat Assistant</title>
   <link rel="stylesheet" href="style.css">
+  
+  <div id="clock" class="console-clock"></div>
 </head>
 
 <body>
